# iroWikiScraper

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_SUMMARY.md  E2E_TEST_SUMMARY.md  EPIC_04_COMPLETION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README-LLM.md  README.md  SCRAPE_TIMING.md  SCRAPING_PROOF.md  US-0702-SUMMARY.md  US-0702-VALIDATION.md  US-0704-acceptance-criteria-checklist.md  US-0704-validation-report.md  US-0705-implementation-summary.md  US-0705-validation-report.md  US-0706-validation-report.md  US-0707-VALIDATION-REPORT.md  US-0708-FIXES-APPLIED.md  US-0708-VALIDATION-SUMMARY.md  US-0709-VALIDATION-REPORT.md  US-0710-COMPREHENSIVE-VALIDATION.md  US-0710-VALIDATION-REPORT-OLD.md  VALIDATION-US-0708.md  VECTOR_IMPLEMENTATION.md  analyze_scale_test.py  check_and_release.sh  coverage.json  create_release_only.sh  demo_link_extractor.py  demo_link_storage.py  monitor_progress.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-vector.txt  requirements.txt  run_full_scrape.sh  (+3 more)
.github/: dependabot.yml
.github/workflows/: RELEASE_WORKFLOW.md  lint.yml  manual-scrape-v2.yml  manual-scrape.yml  monthly-scrape.yml  notify-release.yml  quick-test.yml  release-vector.yml  scrape-test-fixed.yml  test-scrape.yml  test.yml
config/: config.example.yaml
docs/: EPIC-07-FINAL-VALIDATION.md  EPIC_03_VALIDATION.md  EPIC_04_VALIDATION_DETAILED.md  EPIC_04_VALIDATION_FINAL.md  EPIC_05_VALIDATION.md  EPIC_06_COMPLETION.md  EPIC_06_VALIDATION.md  LOCAL_SCRAPING.md  PRE_COMMIT.md  README.md  REAL-WORLD-TEST-REPORT.md  VECTOR_DATABASE.md  WORKFLOWS.md
docs/design/: 2026-01-26_01_gokore_integration.md  2026-01-26_02_vector_database.md  2026-01-26_02_vector_embeddings.md  README.md
docs/user-stories/: README.md
examples/: __init__.py  api_client_demo.py  rag_example.py  semantic_search_example.py
python-vector-client/: README.md  pyproject.toml
python-vector-client/irowiki_vector_client/: __init__.py
schema/: README.md
scraper/: __init__.py  __main__.py  config.py
scripts/: create-vector-release.sh  download-images.sh  generate-stats-simple.sh  generate-stats.sh  local-scrape-and-release.sh  package-release.sh  test-workflow-local.sh  vectorize-wiki.py  vectorize_wiki.py
sdk/: README.md  go.mod  go.sum
tests/: VECTOR_TEST_SUITE.md  conftest.py  test_api_client.py  test_api_resilience.py  test_checkpoint.py  test_cli_args.py  test_cli_commands.py  test_cli_statistics.py  test_cli_terminal.py  test_config.py  test_error_handling.py  test_file_discovery.py  test_file_downloader.py  test_link_extractor.py  test_link_storage.py  test_page_discovery.py  test_pagination.py  test_progress_edge_cases.py  test_progress_logging.py  test_progress_tracker.py  test_rate_limiter.py  test_recent_changes.py  test_response_validator.py  test_revision_model.py  test_revision_scraper.py  test_us0706_validation.py  test_us0707_config_management.py  test_us0707_edge_cases.py  test_us0707_precedence_validation.py  test_us0711_resume.py  test_us0712_documentation.py
(+336 files in other folders)
