[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irowiki-vector-client"
version = "1.0.0"
description = "Python client for iRO Wiki vector databases"
readme = "README.md"
authors = [
    {name = "iRO Wiki Scraper Project"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ragnarok-online", "wiki", "vector-database", "semantic-search", "rag"]
requires-python = ">=3.11"

dependencies = [
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client>=1.7.0",
]
chromadb = [
    "chromadb>=0.4.0",
]
all = [
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/lenaxia/iroWikiScraper"
Documentation = "https://github.com/lenaxia/iroWikiScraper/blob/main/docs/VECTOR_DATABASE.md"
Repository = "https://github.com/lenaxia/iroWikiScraper"
Issues = "https://github.com/lenaxia/iroWikiScraper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["irowiki_vector_client*"]
